--- a/popup.html
+++ b/popup.html
@@ -16,27 +16,36 @@
       height: 600px;
       background: #f5f5f5;
     }
-    
+    .main-container, .preview-container{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+    .preview-container {
+      margin-top: 30px;
+    }
+
     #preview {
-      max-width: 80%;
-      max-height: 80%;
+      max-width: 60%;
+      max-height: 60%;
       object-fit: contain;
     }
 
   </style>
 </head>
 <body>
+  <div class="main-container">
   <div class="controls">
     <button id="screenshot">Take Screenshot</button>
     <button id="crop-button">Crop & Download</button>
-    <h1>drag and crop the part of the image u want!</h1>
   </div>
-  
-  <div class="preview-container">
+  <div class="preview-container" style="border: solid;">
     <img id="preview">
     <div id="selection-tool"></div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  </div>
+  <script src="jquery.min.js"></script>
   <script src="popup.js"></script>
   <script src="Selection.js"></script>
 </body>
