--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
     <div id="selection-tool"></div>
   </div>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="lib/jquery.min.js"></script>
   <script src="popup.js"></script>
   <script src="Selection.js"></script>
 </body>
