update: kinda stable demo

--- a/botanica/botanica.html
+++ b/botanica/botanica.html
@@ -21,9 +21,9 @@
     <div id="selection-tool"></div>
   </div>
   <div class="foot">
-    <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica"><img src="../assets/images/github-mark.png"></a></div>
-    <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica"><img src="../assets/images/github-mark.png"></a></div>
-    <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica"><img src="../assets/images/github-mark.png"></a></div>
+    <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica"><img src="../assets/images/github.svg"></a></div>
+    <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica/issues"><img src="../assets/images/issue.svg"></a></div>
+    <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica"><img src="../assets/images/ko-fi.svg"></a></div>
     <div class="creator"><p>created by dima with <span style="color: rgb(0, 255, 0);"><3</span></p></div>
   </div>
   </div>
