fix: devicescalefactor troublesome

--- a/botanica/botanica.html
+++ b/botanica/botanica.html
@@ -14,7 +14,8 @@
   </div>
   <div class="controls">
     <button id="screenshot">Take Screenshot</button>
-    <button id="crop-button">Crop & Download</button>
+    <button id="crop-button">Crop</button>
+    <button id="download-button">Download</button>
   </div>
   <div class="preview-container">
     <img id="preview">
