--- a/botanica/botanica.html
+++ b/botanica/botanica.html
@@ -15,7 +15,10 @@
   <div class="controls">
     <button id="screenshot">Take Screenshot</button>
     <button id="crop-button">Crop</button>
-    <button id="download-button">Download</button>
+    <div class="copy-or-down">
+      <button id="download-button">Download</button>
+      <button id="copy-button">Copy</button>
+    </div>
   </div>
   <div class="preview-container">
     <img id="preview">
@@ -24,8 +27,19 @@
   <div class="foot">
     <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica"><img src="../assets/images/github.svg"></a></div>
     <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica/issues"><img src="../assets/images/issue.svg"></a></div>
-    <div class="bgrd-btn"><a id="social-link" href="https://github.com/krovskiy/botanica"><img src="../assets/images/ko-fi.svg"></a></div>
+    <div class="bgrd-btn"><a id="social-link" href="https://kafeshka.cc/"><img src="../assets/images/ko-fi.svg"></a></div>
     <div class="creator"><p>created by dima with <span style="color: rgb(0, 255, 0);"><3</span></p></div>
+  </div>
+  <div class="quality-screenshot">
+    <p>Screenshot Quality:</p>
+    <input id="slider" type="range" min="1" max="5" value="2">
+    <div class="range">
+      <p>1</p>
+      <p>2</p>
+      <p>3</p>
+      <p>4</p>
+      <p>5</p>
+    </div>
   </div>
   </div>
   <script src="../lib/jquery.min.js"></script>
